Added details to resume

--- a/public/resume.html
+++ b/public/resume.html
@@ -1,12 +1,12 @@
 <header>
     <h1>Tucker McLean<span class="blink"></span></h1>
-    <p class="center"><span class="nowrap">Beaverton, Oregon USA</span> <span class="directory">|</span> <a href="tel:+18124304200">+1 812 430 4200</a> <span class="symlink">|</span> <a href="mailto:me@tuckermclean.com">me@tuckermclean.com</a> <span class="executable">|</span> <a href="https://linkedin.com/in/tucker-mclean" target="_blank">linkedin.com/in/tucker-mclean</a></p>
+    <p class="center"><span class="nowrap">Beaverton, Oregon USA</span> | <a href="tel:+18124304200">+1 812 430 4200</a> | <a href="mailto:me@tuckermclean.com">me@tuckermclean.com</a> | <a href="https://tuckermclean.com/">tuckermclean.com</a> | <a href="https://linkedin.com/in/tucker-mclean" target="_blank">linkedin.com/in/tucker-mclean</a></p>
     <h3 style="float: none;" class="center">Cloud Engineer</h3>
     <p class="center"><span class="nowrap">Devoted IT Professional</span> <span class="executable">|</span> <span class="nowrap">Linux &amp; Networking Expert</span> <span class="symlink">|</span> <span class="nowrap">Open-Source Technologies</span></p>
 </header>
 <section>
     <h2>Summary</h2>
-    <p>Devoted Cloud Engineer and AWS Certified Cloud Practitioner with a proven track record of delivering innovative solutions in Linux, networking, and cloud technologies, ensuring scalable and efficient systems. Maximizes team productivity by automating processes and providing expertise and tactful feedback where the team needs it most.</p>
+    <p>Devoted Cloud Engineer and AWS Certified Cloud Practitioner with a proven track record of delivering innovative solutions in Linux, networking, and cloud technologies, ensuring scalable and efficient systems. Maximizes team productivity by automating processes and providing expertise and tactful feedback where the team needs it most. Recent accomplishments include implementing cloud-based solutions and infrastructure as code (IaC) using AWS services such as S3, API Gateway, Lambda, DynamoDB, and CloudFront.</p>
 </section>
 <section>
     <h2>Core Competencies</h2>
@@ -14,6 +14,10 @@
         <li>Network Infrastructure</li>
         <li>Linux</li>
         <li>Amazon Web Services (AWS)</li>
+        <li>Infrastructure as Code (IaC)</li>
+        <li>Serverless Computing</li>
+        <li>Database Management</li>
+        <li>API Gateway and CloudFront</li>
     </ul>
 </section>
 <section>
@@ -88,6 +92,23 @@
     <h2>Additional Relevant Experience</h2>
     <h3>Central Oregon Internet <span class="location">Bend, Oregon</span></h3>
     <p class="summary">Technical Support | Linux System Administrator</p>
+</section>
+<section>
+    <h2>Selected Projects</h2>
+    <ul>
+        <li>
+            <p>
+                <strong>AWS Chat Solution</strong><br/>
+                Developed and deployed a real-time chat system hosted on AWS using S3, CloudFront, Lambda, API Gateway, and DynamoDB. Integrated OAuth for secure authentication, providing a seamless and secure user experience.
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>Lab Automation System</strong><br/>
+                Engineered a customer OS deployment system using Python and RHEL, automating network services such as HTTP, DHCP, DNS, and TFTP. Repurposed outdated hardware to create an efficient and cost-effective solution.
+            </p>
+        </li>
+    </ul>
 </section>
 <section>
     <h2>Education</h2>
