--- a/chat.html
+++ b/chat.html
@@ -2,6 +2,7 @@
     <div id="chat-users"></div>
 </div>
 <div id="chat-submit">
+    <div id="chat-connections"></div>
     <textarea id="message" placeholder="Type your message"></textarea>
     <button id="message-send">Send</button>
 </div>
