Added onto welcome copy

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -16,9 +16,10 @@
         <li>Untangled critical issues with Wireshark, streamlined firmware releases, and drove compliance workflows.
         </li>
     </ul>
-    <p>I'm fluent in <strong>Linux</strong> (RHEL, Debian, Ubuntu, CentOS, Arch), <strong>Python</strong>, and <strong>Ansible</strong>, and I bring a holistic view of
+    <p>I'm fluent in <strong>Linux</strong> (RHEL, Debian, Ubuntu, CentOS, Arch), <strong>Python</strong>, <strong>Node.JS</strong>, <strong>Terraform</strong> and <strong>Ansible</strong>, and I bring a holistic view of
         systems--technical and organizational. I see the big picture, find inefficiencies, and deliver reliable
         solutions that stand the test of time.</p>
-    <p>Now, I'm expanding into <strong>AWS</strong> to bring scalable, efficient systems into the cloud.</p>
+    <p>Now, I'm expanding into <strong>AWS</strong> to bring scalable, efficient systems into the cloud. <a href="https://github.com/tuckermclean/tuckermclean.com">This website</a> and the AWS cloud <a href="https://github.com/tuckermclean/tuckermclean.com_backend">infrastructure-as-code</a> supporting it are available for your perusal at <a href="https://github.com/tucker.mclean">my GitHub</a>.</p>
+    <p>I'd like you to read about <a href="/blog/my-cloud-journey">my cloud journey</a>.</p>
     <p>If you need someone who sees both the forest <em>and</em> the trees--and gets things done--let's talk.</p>
 </section>
