Adjusted resume summary

--- a/public/resume.html
+++ b/public/resume.html
@@ -6,7 +6,7 @@
 </header>
 <section>
     <h2>Summary</h2>
-    <p>Devoted Cloud Engineer and AWS Certified Cloud Practitioner with a proven track record of delivering innovative solutions in Linux, networking, and cloud technologies, ensuring scalable and efficient systems. Maximizes team productivity by automating processes and providing expertise and tactful feedback where the team needs it most. Recent accomplishments include implementing cloud-based solutions and infrastructure as code (IaC) using AWS services such as S3, API Gateway, Lambda, DynamoDB, and CloudFront.</p>
+    <p>Devoted IT Professional and AWS Certified Cloud Practitioner with proven expertise in Linux, networking, and cloud technologies. Known for delivering scalable and efficient solutions, automating workflows, and providing targeted, tactful feedback. Proficient in Python, Node.JS, and orchestration tools like Terraform and Ansible, with recent accomplishments in building AWS-based infrastructure as code (IaC) using services like S3, API Gateway, Lambda, and DynamoDB.</p>
 </section>
 <section>
     <h2>Core Competencies</h2>
@@ -99,7 +99,7 @@
         <li>
             <p>
                 <strong>AWS Chat Solution</strong><br/>
-                Developed and deployed a real-time chat system hosted on AWS using S3, CloudFront, Lambda, API Gateway, and DynamoDB. Integrated OAuth for secure authentication, providing a seamless and secure user experience.
+                Developed and deployed a real-time chat system hosted on AWS using S3, CloudFront, Lambda functions written in Node.JS, API Gateway, DynamoDB, Simple Queueing Service (SQS), and Cognito. Integrated OAuth/OIDC for secure authentication, providing a seamless and secure user experience.
             </p>
         </li>
         <li>
