Added My Cloud Journey article

--- a/public/intro.html
+++ b/public/intro.html
@@ -39,16 +39,20 @@
         <strong>WSL</strong> and open-source automation with <strong>Python</strong> and <strong>Ansible</strong>. But
         beyond tools, my strength is in seeing the big picture. I understand how components, people, and processes
         interact.</p>
-    <p>I am intensely curious, deeply perceptive, and relentlessly resourceful. Sometimes, that means diagnosing a
-        network storm or eliminating an inefficiency others missed. I may not always be the smartest in the room, but
-        I'm the one who delivers reliable, efficient solutions that stand the test of time.</p>
-    <p>Now, I'm bringing my talents to the <strong>cloud</strong> with AWS, merging decades of experience with the
-        scalability of modern infrastructure. I thrive where the technical meets the practical. I'm here to connect
-        systems, people, and ideas, ensuring everything flows smoothly, reliably, and efficiently.</p>
-    <p>If you're looking for someone who sees the forest <em>and</em> the trees, let's talk. I bring curiosity,
-        expertise, and a track record of getting things done. I've got niche skills, serious Google-fu, and a whole lot
-        of heart for what I do. After over three decades in tech, I'm just as excited today as I was in 1990.</p>
-    <p>Sincerely,</p>
+        <p>In the last few months, I've expanded my expertise into the <strong>cloud</strong> with AWS. This has added an exciting new dimension to my technical toolkit. Here's what I've been working on:</p>
+        <ul>
+            <li>I've built <strong>serverless architectures</strong> with AWS Lambda, integrating API Gateway to create scalable, event-driven solutions.</li>
+            <li>I'm managing <strong>Infrastructure-as-Code (IaC)</strong> with Terraform, streamlining resource deployments across environments.</li>
+            <li>I've developed secure multi-account setups with <strong>AWS Organizations</strong>, ensuring compliance and efficient resource sharing.</li>
+            <li>To enhance automation, I've incorporated <strong>DynamoDB</strong> for backend storage and leveraged <strong>S3</strong> with <strong>CloudFront</strong> for fast and reliable web hosting.</li>
+            <li>I'm implementing <strong>CI/CD pipelines</strong> to accelerate development cycles while maintaining high-quality standards.</li>
+        </ul>
+        <p>Now, I'm combining decades of experience with the scalability and power of AWS. Whether it's designing resilient systems, troubleshooting the unexpected, or bridging the gap between technology and business needs, I thrive where the technical meets the practical. I connect systems, people, and ideas, ensuring everything flows smoothly, reliably, and efficiently.</p>
+        <p>If you're looking for someone who sees the forest <em>and</em> the trees, let's talk. I bring curiosity,
+            expertise, and a track record of getting things done. I've got niche skills, serious Google-fu, and a whole lot
+            of heart for what I do. After over three decades in tech, I'm just as excited today as I was in 1990.</p>
+        <p>Sincerely,</p>
     <p>TM❤️</p>
     <p class="center" style="font-size: 1.35rem;"><a href="#/resume" class="directory">Resume</a></p>
+    <p class="center" style="font-size: 1.35rem;"><a href="#/cloud-journey">My Cloud Journey</a></p>
 </section>
