--- a/public/welcome.html
+++ b/public/welcome.html
@@ -3,10 +3,14 @@
     <h2>I've spent over 3 decades building, optimizing, and maintaining systems that just work.🧙‍♂️🪄🖥️</h2>
 </header>
 <section>
-    <div style="display: flex; justify-content: space-around;">
-        <span style="font-size: 1.35rem;"><a href="#/intro" class="executable">Introduction</a></span>
-        <span style="font-size: 1.35rem;"><a href="#/resume" class="directory">Resume</a></span>
-    </ul>
+    <p style="display: flex; justify-content: space-evenly;">
+        <span style="font-size: 1.35rem; width: 50%;" class="center"><a href="#/intro" class="executable">Introduction</a></span>
+        <span style="font-size: 1.35rem; width: 50%;" class="center"><a href="#/resume" class="directory">Resume</a></span>
+    </p>
+
+    <p class="center">
+        <span style="font-size: 1.35rem;"><a href="#/cloud-journey">My Cloud Journey</a></span>
+    </p>
 </section>
 <section>
     <p>At <strong>Intel</strong>, I engineered solutions where others saw chaos:</p>
@@ -20,6 +24,6 @@
         systems--technical and organizational. I see the big picture, find inefficiencies, and deliver reliable
         solutions that stand the test of time.</p>
     <p>Now, I'm expanding into <strong>AWS</strong> to bring scalable, efficient systems into the cloud. <a href="https://github.com/tuckermclean/tuckermclean.com">This website</a> and the AWS cloud <a href="https://github.com/tuckermclean/tuckermclean.com_backend">infrastructure-as-code</a> supporting it are available for your perusal on GitHub.</p>
-    <p>I'd like you to read about <a href="/blog/my-cloud-journey">my cloud journey</a>.</p>
+    <p>I'd like you to read about <a href="#/cloud-journey">my cloud journey</a>.</p>
     <p>If you need someone who sees both the forest <em>and</em> the trees--and gets things done--let's talk.</p>
 </section>
