Added pop-out image window

--- a/public/cloud-journey.html
+++ b/public/cloud-journey.html
@@ -6,6 +6,8 @@
     </header>
     <section>
         <h2>Introduction</h2>
+        <p><a href="/aws_graph.png" class="no-text" onclick="event.preventDefault(); createWindow('cloud-graph', 'Cloud Graph', '<img src=\'/aws_graph.png\'/>', '☁️', true, ['image']);"><img src="/aws_graph.png" style="max-width: 100%; max-height: 20rem;"/></a></p>
+        <p><a href="/aws_graph.png" onclick="event.preventDefault(); createWindow('cloud-graph', 'Cloud Graph', '<img src=\'/aws_graph.png\'/>', '☁️', true, ['image']);">Click to expand</a></p>
         <p>Welcome to my cloud portfolio journey!</p>
         <p>I'm excited to share how I built this website and cloud project as a showcase of my skills and values.</p>
         <p>My portfolio at <a href="https://tuckermclean.com">TuckerMcLean.com</a> was intended as both a learning experience and a showcase of my skills and values as an IT professional. I hoped to produce something worthy to display as a plaque of my skills beside my AWS certification(s). But first, I had some work to do.</p>
