Pared down core competencies

--- a/public/resume.html
+++ b/public/resume.html
@@ -15,9 +15,7 @@
         <li>Linux</li>
         <li>Amazon Web Services (AWS)</li>
         <li>Infrastructure as Code (IaC)</li>
-        <li>Serverless Computing</li>
-        <li>Database Management</li>
-        <li>API Gateway and CloudFront</li>
+        <li>Full-Stack Development</li>
     </ul>
 </section>
 <section>
