Unmessied the links in welcome

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -3,13 +3,10 @@
     <h2>I've spent over 3 decades building, optimizing, and maintaining systems that just work.🧙‍♂️🪄🖥️</h2>
 </header>
 <section>
-    <p style="display: flex; justify-content: space-evenly;">
-        <span style="font-size: 1.35rem; width: 50%;" class="center"><a href="#/intro" class="executable">Introduction</a></span>
-        <span style="font-size: 1.35rem; width: 50%;" class="center"><a href="#/resume" class="directory">Resume</a></span>
-    </p>
-
-    <p class="center">
+    <p style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;">
+        <span style="font-size: 1.35rem;" class="center"><a href="#/intro" class="executable">Introduction</a></span>
         <span style="font-size: 1.35rem;"><a href="#/cloud-journey">My Cloud Journey</a></span>
+        <span style="font-size: 1.35rem;" class="center"><a href="#/resume" class="directory">Resume</a></span>
     </p>
 </section>
 <section>
