--- a/public/welcome.html
+++ b/public/welcome.html
@@ -3,7 +3,7 @@
     <h2>I've spent over 3 decades building, optimizing, and maintaining systems that just work.🧙‍♂️🪄🖥️</h2>
 </header>
 <section>
-    <p style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;">
+    <p style="display: flex; flex-wrap: wrap; justify-content: space-around; gap: 1rem;">
         <span style="font-size: 1.35rem;" class="center"><a href="#/intro" class="executable">Introduction</a></span>
         <span style="font-size: 1.35rem;"><a href="#/cloud-journey">My Cloud Journey</a></span>
         <span style="font-size: 1.35rem;" class="center"><a href="#/resume" class="directory">Resume</a></span>
